--- a/index.html
+++ b/index.html
@@ -1,3 +1,8 @@
+/*
+  Copyright © 2025  MUHAMMAD ISMAYIL 
+  All rights reserved.
+  Unauthorized copying or distribution is strictly prohibited.
+*/
 <!DOCTYPE html>
 <html lang="en">
 <head>
